# KitForge

./: .gitignore  README.md  main.py  pyproject.toml  pyrightconfig.json
app/: catalogue.py  config.py  main.py  models.py  stats.py  storage.py
app/controllers/: app_controller.py  build_controller.py
app/views/: bag_panel.py  build.py  catalogue_panel.py  error_screen.py  icons.py  kit_panel.py  middle_panel.py  page.py  stats_panel.py  styles.py
app/views/common/: page.py  styles.py
app/views/kit_list/: screen.py
data/: catalogue.json
data/kits/: 63291987-e295-4f5a-a961-a49d46bf1f42.json
docs/: FRD.md  PRD.md  data-flow.md  data-model.md  roadmap.md  tasks.md  user-stories.md
docs/wireframes/: build-screen.html  kit-configuration-modal.html  kit-list.html  readiness-report.html
src/: catalogue.py  config.py  models.py  store.py  styles.qss
src/static/: styles.css
src/templates/: kit_list.html
src/views/: kit_card.py  kit_list_view.py
src/views/ui/: kit_card.ui  kit_card_ui.py  kit_list.ui  kit_list_ui.py
tests/: conftest.py  test_catalogue.py  test_models.py  test_stats.py  test_storage.py  test_store.py  test_validation.py
