[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kitforge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet>=0.84.0",
    "pydantic>=2.13.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
