[project]
name = "kitforge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
